# WarGameChess

./: .gitignore  CMakeLists.txt
cmake/: functions.cmake  mylib_export.h.in
inc/DeduceServer/: DeduceMain.h  IGameEngine.h
inc/WGCCommon/: DeduceEvent.h
libs/: Qt5Qmqtt.lib  Qt5Qmqttd.lib
src/: CMakeLists.txt
src/DataDistribution/: CMakeLists.txt
src/DataDistribution/inc/: CJsonVariant.h  DataDistributionClient.h  MainWindow.h  SimulationAdvancedEngine.h
src/DataDistribution/src/: CJsonVariant.cpp  DataDistributionClient.cpp  main.cpp
src/DeduceClient/: CMakeLists.txt
src/DeduceClient/inc/: MainWindow.h
src/DeduceClient/src/: MainWindow.cpp  main.cpp
src/DeduceClient/ui/: MainWindow.ui
src/DeduceHallClient/: CMakeLists.txt
src/DeduceHallClient/src/: MainWindow.cpp
src/DeduceServer/: CMakeLists.txt  DeduceMain.cpp  main.cpp  main3.cpp
src/DeduceServer/inc/: DataDistributioner.h  DeduceMain.h  DeduceWorker.h  SimulationEngine.h
src/DeduceServer/src/: DataDistributioner.cpp  DeduceWorker.cpp  MainWindow.cpp  SimulationAdvancedEngine.cpp  SimulationEngine.cpp  main.cpp
src/DeduceServer/test/: test1.cpp  test2.cpp  test3.cpp
ui/DeduceServer/: MainWindow.ui
